[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/HUD.gd" type="Script" id=1]

[node name="HUD" type="Control"]
margin_right = 1024.0
margin_bottom = 50.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 10.0
margin_top = -20.0
margin_right = 304.0
margin_bottom = 20.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HpLabel" type="Label" parent="Panel/HBoxContainer"]
margin_top = 13.0
margin_right = 50.0
margin_bottom = 27.0
text = "HP: XXX"

[node name="ConfigButton" type="Button" parent="Panel/HBoxContainer"]
margin_left = 60.0
margin_right = 111.0
margin_bottom = 40.0
text = "Config"

[node name="ForecastButton" type="Button" parent="Panel/HBoxContainer"]
margin_left = 121.0
margin_right = 187.0
margin_bottom = 40.0
text = "Forecast"

[node name="CollidixButton" type="Button" parent="Panel/HBoxContainer"]
margin_left = 197.0
margin_right = 256.0
margin_bottom = 40.0
text = "Collidix"

[node name="ConfirmButton" type="Button" parent="Panel/HBoxContainer"]
margin_left = 266.0
margin_right = 328.0
margin_bottom = 40.0
text = "Confirm"
__meta__ = {
"_edit_use_anchors_": false
}
